# devterm-desktop

./: README.md  pyproject.toml
devterm_desktop/: __init__.py  main.py
docs/: ARCHITECTURE.md
src/: main.py
